--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "common"]
 	path = common
 	url = https://github.com/hongzhuxuke/common.git
+[submodule "ClassSDK"]
+	path = ClassSDK
+	url = https://github.com/hongzhuxuke/ClassSDK.git
