--- a/VLive/ClassRoom.vcxproj
+++ b/VLive/ClassRoom.vcxproj
@@ -22,7 +22,7 @@
     <ProjectGuid>{B814121D-2EEF-4531-9E21-5294CB21EBE4}</ProjectGuid>
     <Keyword>Qt4VSv1.0</Keyword>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
-    <ProjectName>VhallClassRoom</ProjectName>
+    <ProjectName>ClassRoom</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
